change to English

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="input-group mx-sm-3 mb-2">
                     <div class="input-group-prepend">
-                        <span class="input-group-text" id="timeLabel">Czas:</span>
+                        <span class="input-group-text" id="timeLabel">Time:</span>
                     </div>
                     <input type="range" id="time" value="10000" max="60000" class="form-control"
                            aria-describedby="timeLabel">
