change size of inputs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="col-3">
             <form class="form-horizontal">
                 <div class="form-group">
-                    <div class="input-group mb-3">
+                    <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="outerCircleLabel">Outer circle:</span>
                         </div>
@@ -23,7 +23,7 @@
                                aria-describedby="outerCircleLabel">
                     </div>
 
-                    <div class="input-group mb-3">
+                    <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="innerCircleLabel">Inner circle:</span>
                         </div>
@@ -31,7 +31,7 @@
                                aria-describedby="innerCircleLabel">
                     </div>
 
-                    <div class="input-group mb-3">
+                    <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="offsetLabel">Offset:</span>
                         </div>
@@ -39,13 +39,13 @@
                                aria-describedby="offsetLabel">
                     </div>
 
-                    <div class="input-group mb-3">
+                    <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="colorPickerLabel">Color:</span>
                         </div>
                         <input id="colorPicker" type="color" class="form-control" aria-describedby="colorPickerLabel">
                     </div>
-                    <div class="form-group form-check">
+                    <div class="form-group input-group-sm form-check">
                         <input type="checkbox" class="form-check-input" id="inside" checked>
                         <label class="form-check-label" for="inside">Inner</label>
                     </div>
@@ -60,7 +60,7 @@
         <div class="col-1"></div>
         <div class="col-7">
             <div class="row">
-                <div class="input-group mx-sm-3 mb-2">
+                <div class="input-group input-group-sm mx-sm-3 mb-2">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="timeLabel">Time:</span>
                     </div>
